# NASflow

./: .gitignore  README.md
.github/workflows/: cleanup-legacy.yml  docker-build.yml
agent/: Dockerfile  README.md  docker-compose.example.yml  requirements.txt
agent/app/: __init__.py  auth.py  cache.py  main.py  settings.py  status_builder.py  utils.py
agent/app/collectors/: __init__.py  cpu.py  data_protection.py  drives.py  environment.py  memory.py  network.py  nvme.py  storage.py  system.py  workloads.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  HARDWARE_FIRMWARE_DEV.md  NAS_DOCKER_AGENT_DEV.md  NAS_Desktop_UI_Design_Document_No_Environment.docx  ZSPACE_TARGET_NOTES.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  api_client.c  api_client.h  app_config.c  app_config.h  app_main.c  board_5b.c  board_5b.h  idf_component.yml  nas_status.c  nas_status.h  power_monitor.c  power_monitor.h  ui.c  ui.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
firmware/main/backgrounds/: bg_page_1.c  bg_page_2.c  bg_page_3.c  bg_page_4.c  bg_page_5.c  bg_page_6.c  bg_page_7.c  page_backgrounds.c  page_backgrounds.h
firmware/main/fonts/: lv_font_nas_cn_18.c  lv_font_nas_cn_26.c
